<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_description" translatable="false">Ads remover</string>
    <string name="app_name" translatable="false">MinMinGuard</string>
    <string name="app_version">MinMinGuard version: %s</string>
    <string name="app_copyright">Copyright \u00A9 2014–2015 by <i>Chieh-Min Wang(FatMinMin)</i></string>
    <string name="app_about"><b>This is an app for you to remove ads from various ad networks.
         But still remember to support the app developers by disabling <i>MinMinGuard</i> and clicking the ads.
         \n\nHave fun with <i>MinMinGuard</i>.</b></string>
    
    <string name="drawer_app_settings">App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_log">Log</string>
    <string name="drawer_minminguard_settings">MinMinGuard Settings</string>

    <string name="dialog_title_enable_mmg">Enable MinMinGuard?</string>
    <string name="dialog_msg_enable_mmg">Advertisement detected. Do you want to enable MinMinGuard for this app?</string>
    <string name="dialog_btn_enable">Enable now</string>
    <string name="dialog_btn_no_enable">No, thanks</string>
    
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_enable_dialog">EnableDialog</string>
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_save_log">Save Log</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_switch_theme">Switch Theme</string>
    
    <string name="msg_deselecting_all">deselecting all&#8230;</string>
    <string name="msg_restart_app"><i>You must restart the app for the changes to take effect.</i></string>
    <string name="msg_saving_log">Saving log</string>
    <string name="msg_saving_log_complete">Log has been saved to %s</string>
    <string name="msg_search">Search</string>
    <string name="msg_selecting_all">selecting all&#8230;</string>

    <string name="settings_enable_host_blocking">Enable hosts blocking</string>
    <string name="settings_enable_log">Enable logging for this app</string>
    <string name="settings_enable_url_filtering_data">Enable Url filtering in WebView data</string>
    <string name="settings_show_system_apps">Show system apps</string>
    <string name="settings_auto_enable_new_apps">Automatically enable for newly installed apps</string>
    <string name="settings_show_apps_with_ads">Show only apps with ads</string>

</resources>

