<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    
    <item 
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:title="@string/menu_refresh" />
    
    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:title="@string/menu_select_all" />
	
    <item
        android:id="@+id/save_log"
        android:icon="@drawable/ic_action_save"
    	android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/menu_save_log" />
    
    <item 
        android:id="@+id/switch_theme"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/menu_switch_theme" />
</menu>
